// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) nested expression - string litera…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
        posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(2) nested expression - template lite…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
        posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(3) double nested expression - string…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet
        \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
        posuere\`}
        ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(4) double nested expression - templa…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet
        \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
        posuere\`}
        ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(5) nested expression - string litera…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet \${
        condition
          ? 'consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
        } ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(6) nested expression - template lite…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet \${
        condition
          ? 'consectetur adipiscing elit proin'
          : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
            ex massa hendrerit eu posuere\`
        } ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(7) double nested expression - string…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet \${
          condition
            ? 'consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
        } ex massa hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(8) double nested expression - templa…' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="\`lorem ipsum dolor sit amet
        \${\`lorem ipsum dolor sit amet \${
          condition
            ? 'consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
        } ex massa hendrerit eu posuere\`}
        ex massa hendrerit eu posuere\`"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;
